--- a/index.html
+++ b/index.html
@@ -1,33 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+	<title>Frontend Mentor | NFT preview card component</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
 
-  Equilibrium #3429
+	<div class='main-container'>
+		<div class="card-container">
 
-  Our Equilibrium collection promotes balance and calm.
+			<div class="card-image">
+				<div class='card-image_bg'></div>
+			</div>
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+			<h2 class='card-title'>
+				<a href="#" class='card-title_link'>Equilibrium #3429</a>
+			</h2>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+			<p class='card-text'>
+				Our Equilibrium collection promotes balance and calm.
+			</p>
+
+			<div class="card-info">
+				<div class="card-price">
+					<img src="./images/icon-ethereum.svg" alt="">
+					<p>0.041 ETH</p>
+				</div>
+				<div class="card-date">
+					<img src="./images/icon-clock.svg" alt="">
+					<p>3 days left</p>
+				</div>
+			</div>
+			<div class='card-line'></div>
+			<div class="info-user">
+				<img src="./images/image-avatar.png" alt="Avatar" class='info-user_image'>
+				<p class='info-user_creation'>
+					<span class='info-user_title'>Creation of</span>
+					<a href='#' class='info-user_name'>Jules Wyvern</a>
+				</p>
+			</div>
+
+
+
+		</div>
+	</div>
+
 </body>
+
 </html>
